k8s/solver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solver
  template:
    metadata:
      labels:
        app: solver
    spec:
      containers:
        - name: solver
          image: solver-service:latest
          ports:
            - containerPort: 5000
