k8s/credits-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credits-service
spec:
  selector:
    app: credits
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
