k8s/problems-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: problems-service
spec:
  selector:
    app: problems
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
