k8s/results-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: results-service
spec:
  selector:
    app: results
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
