k8s/solver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solver-service
spec:
  selector:
    app: solver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
