k8s/submission-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: submission-service
spec:
  selector:
    app: submission
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
