k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: tiropita
      http:
        paths:
          - path: /credits
            pathType: Prefix
            backend:
              service:
                name: credits-service
                port:
                  number: 3000
          - path: /problems
            pathType: Prefix
            backend:
              service:
                name: problems-service
                port:
                  number: 3000
          - path: /results
            pathType: Prefix
            backend:
              service:
                name: results-service
                port:
                  number: 3000
          - path: /solver
            pathType: Prefix
            backend:
              service:
                name: solver-service
                port:
                  number: 3000
          - path: /submission
            pathType: Prefix
            backend:
              service:
                name: submission-service
                port:
                  number: 3000
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000
