k8s/problems-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: problems-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: problems
  template:
    metadata:
      labels:
        app: problems
    spec:
      containers:
        - name: problems
          image: docker.io/library/problems-service:latest
          ports:
            - containerPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: problems-ingress
spec:
  rules:
    - http:
        paths:
          - path: /problems
            pathType: Prefix
            backend:
              service:
                name: problems-service
                port:
                  number: 3000
