k8s/submission-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: submission-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: submission
  template:
    metadata:
      labels:
        app: submission
    spec:
      containers:
        - name: submission
          image: docker.io/library/submission-service:latest
          ports:
            - containerPort: 3000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: submission-ingress
spec:
  rules:
    - http:
        paths:
          - path: /submission
            pathType: Prefix
            backend:
              service:
                name: submission-service
                port:
                  number: 3000
